kubernetes_manifests_file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mainlb
  namespace: three-tier
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    - host: k8s-threetie-mainlb-1dd958d0ec-229107632.ap-south-1.elb.amazonaws.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:   
                  number: 8181
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port: 
                  number: 80
